@@ -32,6 +32,8 @@ Release 0.12.1 - unreleased
       
     S2GRAPH-28: _to option gives wrong result on query.	
                 (Contributed by Hyunsung Jo<hyunsung.jo@gmail.com>, committed by DOYUNG YOON)
+    
+    S2GRAPH-38: Transform option gives wrong result since it transform degree edge too (Committed by DOYUNG YOON).
 
   TASKS
 
